--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ semver = "1.0.22"
 sha2 = "0.10.8"
 what-the-path = "^0.1.3"
 sysinfo = "0.35.2"
+clap_complete_nushell = "4.5.8"
 
 [dependencies.chrono]
 version = "0.4.23"
